--- a/package.json
+++ b/package.json
@@ -1,39 +1,10 @@
 {
-  "name": "react-component-lib",
+  "name": "react-ts-component-boilerplate",
   "version": "1.0.0",
+  "description": "",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
-  "repository": {
-    "url": "https://github.com/michal-wrzosek/react-component-lib",
-    "type": "git"
-  },
-  "license": "MIT",
   "types": "dist/index.d.ts",
-  "devDependencies": {
-    "@types/react": "^16.9.13",
-    "@types/react-dom": "^16.9.4",
-    "@types/styled-components": "^4.4.0",
-    "@typescript-eslint/eslint-plugin": "^2.9.0",
-    "@typescript-eslint/parser": "^2.9.0",
-    "concurrently": "^5.0.0",
-    "eslint": "^6.7.1",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "install-peers-cli": "^2.1.1",
-    "prepend-file": "^1.3.1",
-    "prettier": "^1.19.1",
-    "rollup": "^1.27.5",
-    "rollup-plugin-typescript2": "^0.25.2",
-    "ts-node": "^8.5.2",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.2"
-  },
-  "peerDependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "styled-components": "^4.4.1"
-  },
   "scripts": {
     "build": "rollup -c",
     "build-watch": "rollup -c -w",
@@ -47,7 +18,35 @@
     "test:lint": "eslint ./src/**/*.ts ./src/**/*.tsx ./example/src/**/*.ts ./example/src/**/*.tsx",
     "test:lint:fix": "npm run test:lint -- --fix"
   },
+  "peerDependencies": {
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "styled-components": "^5.0.1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "files": [
     "dist"
-  ]
+  ],
+  "devDependencies": {
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/styled-components": "^5.0.1",
+    "@typescript-eslint/eslint-plugin": "^2.24.0",
+    "@typescript-eslint/parser": "^2.24.0",
+    "concurrently": "^5.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.19.0",
+    "install-peers-cli": "^2.2.0",
+    "prepend-file": "^1.3.1",
+    "prettier": "^1.19.1",
+    "rollup": "^2.1.0",
+    "rollup-plugin-typescript2": "^0.26.0",
+    "ts-node": "^8.6.2",
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3"
+  }
 }
