--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "ts-node": "^8.6.2",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "styled-components": "^5.0.1"
   }
 }
